Background color changed

--- a/src/index.css
+++ b/src/index.css
@@ -10,7 +10,7 @@
   
   html,
   body {
-      background-color: #4B5563;
+      background-color: #2c3138;
     height: 100vh;
     color: #fff;
     font-family: Arial, Helvetica, sans-serif;
